--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,131 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
+        var your_url = "http://surnames.behindthename.com/top/lists/france/2005";
+        jQuery.ajax = (function (_ajax) {
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <select name="language-select" id="language-select">
-            <option value="one">THIS IS ONE</option>
-            <option value="two">THIS IS TWO</option>
-        </select>
-        <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+            var protocol = location.protocol,
+                    hostname = location.hostname,
+                    exRegex = new RegExp(protocol + '//' + hostname),
+                    YQL = 'http' + (/^https/.test(protocol) ? 's' : '') + '://query.yahooapis.com/v1/public/yql?callback=?',
+                    query = 'select * from html where url="{URL}" and xpath="*"';
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+            function isExternal(url) {
+                return !exRegex.test(url) && /:\/\//.test(url);
+            }
+
+            return function (o) {
+
+                var url = o.url;
+
+                if (/get/i.test(o.type) && !/json/i.test(o.dataType) && isExternal(url)) {
+
+                    // Manipulate options so that JSONP-x request is made to YQL
+
+                    o.url = YQL;
+                    o.dataType = 'json';
+
+                    o.data = {
+                        q: query.replace(
+                                '{URL}',
+                                url + (o.data ?
+                                (/\?/.test(url) ? '&' : '?') + jQuery.param(o.data)
+                                        : '')
+                        ),
+                        format: 'xml'
+                    };
+
+                    // Since it's a JSONP request
+                    // complete === success
+                    if (!o.success && o.complete) {
+                        o.success = o.complete;
+                        delete o.complete;
+                    }
+
+                    o.success = (function (_success) {
+                        return function (data) {
+
+                            if (_success) {
+                                // Fake XHR callback.
+                                _success.call(this, {
+                                    responseText: data.results[0]
+                                    // YQL screws with <script>s
+                                    // Get rid of them
+                                            .replace(/<script[^>]+?\/>|<script(.|\s)*?\/script>/gi, '')
+                                }, 'success');
+                            }
+
+                        };
+                    })(o.success);
+
+                }
+
+                return _ajax.apply(this, arguments);
+
+            };
+
+        })(jQuery.ajax);
+
+
+        $.ajax({
+            url: your_url,
+            type: 'GET',
+            success: function (res) {
+                var text = res.responseText;
+                // then you can manipulate your text as you wish
+                console.log(text);
+            }
+        });
+    </script>
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+
+<!-- Add your site or application content here -->
+<p>Hello world! This is HTML5 Boilerplate.</p>
+<select name="language-select" id="language-select">
+    <option value="one">THIS IS ONE</option>
+    <option value="two">THIS IS TWO</option>
+</select>
+<input type="text" id="textbox">
+<input type="button" value="Get name" onclick="getName()">
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function (b, o, i, l, e, r) {
+        b.GoogleAnalyticsObject = l;
+        b[l] || (b[l] =
+                function () {
+                    (b[l].q = b[l].q || []).push(arguments)
+                });
+        b[l].l = +new Date;
+        e = o.createElement(i);
+        r = o.getElementsByTagName(i)[0];
+        e.src = 'https://www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e, r)
+    }(window, document, 'script', 'ga'));
+    ga('create', 'UA-XXXXX-X', 'auto');
+    ga('send', 'pageview');
+</script>
+</body>
 </html>
