--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/PopularNames.js"></script>
     <script>
         var your_url = "https://nameberry.com/popular_names/US";
         jQuery.ajax = (function (_ajax) {
@@ -74,7 +75,7 @@
             type: 'GET',
             success: function (res) {
                 // then you can manipulate your text as you wish
-                console.log($('<div>').html(res).find('#inner-content').html());
+                console.log($('<div>').html(res).find('??').html());
             }
         });
     </script>
@@ -91,6 +92,8 @@
     <option value="one">THIS IS ONE</option>
     <option value="two">THIS IS TWO</option>
 </select>
+<div id="text-file"></div>
+<script>readInput();</script>
 <label for="textbox"></label><input type="text" id="textbox">
 <input type="button" value="Get name" onclick="getName()">
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
