Displays certain amount of names based on input Does not repeat names already used so name & surname cannot be equal

--- a/src/index.html
+++ b/src/index.html
@@ -87,12 +87,11 @@
 <![endif]-->
 
 <!-- Add your site or application content here -->
-<p>Hello world! This is HTML5 Boilerplate.</p>
 <label for="language-select"></label><select name="language-select" id="language-select">
     <option value="one">THIS IS ONE</option>
     <option value="two">THIS IS TWO</option>
 </select>
-<div id="text-file"></div>
+<p class="text" id="rolled-name">Nada</p>
 <script>console.log(readInput());</script>
 <label for="textbox"></label><input type="text" id="textbox">
 <input type="button" value="Get name" onclick="getName()">
