--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 
 <!-- Add your site or application content here -->
 <label for="language-select"></label><select name="language-select" id="language-select">
-    <option value="one">Male</option>
+    <option style="background-image: url(img/Male-50.png);" value="one">Male</option>
     <option value="two">Female</option>
 </select>
 <br>
@@ -96,6 +96,13 @@
     <input type="checkbox" checked onchange="setMiddle()">
     Middle name
 </label>
+<div id="languages">
+    <input id="english" type="image" src="img/english.png" alt="english" onclick="languageSelect(this)">
+    <input id="french" type="image" src="img/france.png" alt="french" onclick="languageSelect(this)">
+    <input id="italian" type="image" src="img/italy.png" alt="italian" onclick="languageSelect(this)">
+    <input id="spanish" type="image" src="img/spain.png" alt="spanish" onclick="languageSelect(this)">
+    <input id="portuguese" type="image" src="img/portugal.png" alt="portuguese" onclick="languageSelect(this)">
+</div>
 <p class="text" id="rolled-name">Nada</p>
 <script>console.log(readInput());</script>
 <div id="get-name">
@@ -122,5 +129,6 @@
     ga('create', 'UA-XXXXX-X', 'auto');
     ga('send', 'pageview');
 </script>
+<a class="visuallyhidden" href="https://icons8.com">Icon pack by Icons8</a>
 </body>
 </html>
