--- a/www/index.html
+++ b/www/index.html
@@ -7,12 +7,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="../src/apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="js/PopularNames.js"></script>
     <script>
@@ -77,7 +75,7 @@
 
 <!-- Add your site or application content here -->
 <label for="language-select"></label><select name="language-select" id="language-select">
-    <option style="background-image: url(img/Male-50.png);" value="one">Male</option>
+    <option style="background-image: url(images/Male-50.png);" value="one">Male</option>
     <option value="two">Female</option>
 </select>
 <br>
@@ -86,11 +84,11 @@
     Middle name
 </label>
 <div id="languages">
-    <input id="english" type="image" src="img/english.png" alt="english" onclick="languageSelect(this)">
-    <input id="french" type="image" src="img/france.png" alt="french" onclick="languageSelect(this)">
-    <input id="italian" type="image" src="img/italy.png" alt="italian" onclick="languageSelect(this)">
-    <input id="spanish" type="image" src="img/spain.png" alt="spanish" onclick="languageSelect(this)">
-    <input id="portuguese" type="image" src="img/portugal.png" alt="portuguese" onclick="languageSelect(this)">
+    <input id="english" type="image" src="images/english.png" alt="english" onclick="languageSelect(this)">
+    <input id="french" type="image" src="images/france.png" alt="french" onclick="languageSelect(this)">
+    <input id="italian" type="image" src="images/italy.png" alt="italian" onclick="languageSelect(this)">
+    <input id="spanish" type="image" src="images/spain.png" alt="spanish" onclick="languageSelect(this)">
+    <input id="portuguese" type="image" src="images/portugal.png" alt="portuguese" onclick="languageSelect(this)">
 </div>
 
 <div id="name-banner"><p class="text" id="rolled-name">Nada</p></div>
